--- a/modules/home/superfile/config.toml
+++ b/modules/home/superfile/config.toml
@@ -1,6 +1,6 @@
 # ========== General ========== #
 theme = 'gruvbox-dark-hard'
-editor = "micro"
+editor = "vim"
 dir_editor = "nemo"
 
 auto_check_update = false
